[tool.poetry]
name = "greet"
description = "A sample python app using poetry and docker"
version = "1.0.0"
readme = "README.md"
authors = []
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
greet = "src.greet:main"